// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`integration.ts > should inject the types for the virtual module 1`] = `
"declare module "astro-nanostores-i18n:runtime" {
  import type { Components, TranslationLoader, Translations } from '@nanostores/i18n';
  export interface InitializeI18nOptions {
    defaultLocale: string;
    translations: Record<string, Components>;
    get?: TranslationLoader;
  }
  export declare const currentLocale: import('nanostores').PreinitializedWritableAtom<string> & object;
  export declare const initializeI18n: (options: InitializeI18nOptions) => void;
  export declare const useFormat: () => import('@nanostores/i18n').Formatter;
  export declare const useI18n: <Body extends Translations>(componentName: string, baseTranslations: Body) => Body;
  export declare const getI18nInstance: () => ReturnType<typeof import('@nanostores/i18n').createI18n>;
  export declare const getFormatterInstance: () => ReturnType<typeof import('@nanostores/i18n').formatter>;
  export declare const clearCache: (locale?: string) => void;
}
"
`;

exports[`integration.ts > should register virtual module 1`] = `
{
  "imports": {
    "astro-nanostores-i18n:runtime": "import { initializeI18n, useFormat, useI18n, currentLocale, getI18nInstance, getFormatterInstance, clearCache } from "./runtime.js";


initializeI18n({ defaultLocale: "en", translations: {} });

export { useFormat, useI18n, currentLocale, getI18nInstance, getFormatterInstance, clearCache };
",
  },
  "name": "astro-nanostores-i18n",
}
`;

exports[`integration.ts > should register virtual module with translationLoader when provided 1`] = `
{
  "imports": {
    "astro-nanostores-i18n:runtime": "import { initializeI18n, useFormat, useI18n, currentLocale, getI18nInstance, getFormatterInstance, clearCache } from "./runtime.js";
import translationLoader from "./src/i18n/loader.ts";

initializeI18n({ defaultLocale: "en", translations: {}, get: translationLoader });

export { useFormat, useI18n, currentLocale, getI18nInstance, getFormatterInstance, clearCache };
",
  },
  "name": "astro-nanostores-i18n",
}
`;
